Node Editor: Edge scrolling breaks node snapping #100633

Closed
opened 2022-08-25 22:54:29 +02:00 by Leon Schittek · 7 comments
Member

System Information
Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-25 09:50, hash: d4764a385a
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: -

Short description of error
Using edge panning in the node editor when transforming nodes breaks snapping:

  1. When using grid snap the node won't necessarily be aligned with the node grid anymore after edge scrolling.
  2. When using node border snapping (Node X, Node Y or Node X/Y) the node will appear offset from where it's supposed to snap.
Grid snap Border snap
grid-snap.mp4 border-snap.mp4

Exact steps for others to reproduce the error

  1. Open default start up file.
  2. Go into the node editor.
  3. Enable snapping.
  4. Use edge panning while transforming, by moving the node to the edge of the node editor.
  5. Notice how the snapping doesn't behave as expected anymore.
**System Information** Operating system: macOS-11.6.5-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.9 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-25 09:50, hash: `d4764a385a` Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: - **Short description of error** Using edge panning in the node editor when transforming nodes breaks snapping: 1) When using grid snap the node won't necessarily be aligned with the node grid anymore after edge scrolling. 2) When using node border snapping (Node X, Node Y or Node X/Y) the node will appear offset from where it's supposed to snap. |Grid snap|Border snap| |---|---| |[grid-snap.mp4](https://archive.blender.org/developer/F13417323/grid-snap.mp4)|[border-snap.mp4](https://archive.blender.org/developer/F13417324/border-snap.mp4)| **Exact steps for others to reproduce the error** 1) Open default start up file. 2) Go into the node editor. 3) Enable snapping. 4) Use edge panning while transforming, by moving the node to the edge of the node editor. 5) Notice how the snapping doesn't behave as expected anymore.
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thank you for the report.
I can confirm the problem.
I have a suspicion where the problem is, I'll investigate in more detail tomorrow.

Thank you for the report. I can confirm the problem. I have a suspicion where the problem is, I'll investigate in more detail tomorrow.

This issue was referenced by e6a557952e

This issue was referenced by e6a557952ead8e3faf1bd216a73ce542f79f8894

This issue was referenced by 3c060b2216

This issue was referenced by 3c060b2216b868eec99bb0acb3534c3780344774

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-08-26 18:18:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100633
No description provided.