source/blender/editors/transform/transform_mode_edge_slide.c
@@ -292,6 +292,73 @@ static BMLoop *get_next_loop(
   return NULL;
 }
 
+static void edge_slide_projmat_get(TransInfo *t, TransDataContainer *tc, float r_projectMat[4][4])
+{
+  RegionView3D *rv3d = NULL;
+
+  if (t->spacetype == SPACE_VIEW3D) {
+    /* Background mode support. */
+    rv3d = t->region ? t->region->regiondata : NULL;
+  }
+
+  if (!rv3d) {
+    /* Ok, let's try to survive this. */
+    unit_m4(r_projectMat);
+  }
+  else {
+    ED_view3d_ob_project_mat_get(rv3d, tc->obedit, r_projectMat);
+  }
+}
+
+static void edge_slide_pair_project(TransDataEdgeSlideVert *sv,
+                                    ARegion *region,
+                                    float projectMat[4][4],
+                                    float r_sco_a[3],
+                                    float r_sco_b[3])
+{
+  BMVert *v = sv->v;
+
+  if (sv->v_side[1]) {
+    ED_view3d_project_float_v3_m4(region, sv->v_side[1]->co, r_sco_b, projectMat);
+  }
+  else {
+    add_v3_v3v3(r_sco_b, v->co, sv->dir_side[1]);
+    ED_view3d_project_float_v3_m4(region, r_sco_b, r_sco_b, projectMat);
+  }
+
+  if (sv->v_side[0]) {
+    ED_view3d_project_float_v3_m4(region, sv->v_side[0]->co, r_sco_a, projectMat);
+  }
+  else {
+    add_v3_v3v3(r_sco_a, v->co, sv->dir_side[0]);
+    ED_view3d_project_float_v3_m4(region, r_sco_a, r_sco_a, projectMat);
+  }
+}
+
+static void edge_slide_data_init_mval(MouseInput *mi, EdgeSlideData *sld, float *mval_dir)
+{
+  /* Possible all of the edge loops are pointing directly at the view. */
+  if (UNLIKELY(len_squared_v2(mval_dir) < 0.1f)) {
+    mval_dir[0] = 0.0f;
+    mval_dir[1] = 100.0f;
+  }
+
+  float mval_start[2], mval_end[2];
+
+  /* Zero out Start. */
+  zero_v2(mval_start);
+
+  /* dir holds a vector along edge loop */
+  copy_v2_v2(mval_end, mval_dir);
+  mul_v2_fl(mval_end, 0.5f);
+
+  sld->mval_start[0] = mi->imval[0] + mval_start[0];
+  sld->mval_start[1] = mi->imval[1] + mval_start[1];
+
+  sld->mval_end[0] = mi->imval[0] + mval_end[0];
+  sld->mval_end[1] = mi->imval[1] + mval_end[1];
+}
+
 /**
  * Calculate screenspace `mval_start` / `mval_end`, optionally slide direction.
  */
@@ -308,29 +375,20 @@ static void calcEdgeSlide_mval_range(TransInfo *t,
   BMEditMesh *em = BKE_editmesh_from_object(tc->obedit);
   ARegion *region = t->region;
   View3D *v3d = NULL;
-  RegionView3D *rv3d = NULL;
   float projectMat[4][4];
   BMBVHTree *bmbvh;
 
   /* only for use_calc_direction */
   float(*loop_dir)[3] = NULL, *loop_maxdist = NULL;
 
-  float mval_start[2], mval_end[2];
   float mval_dir[3], dist_best_sq;
 
   if (t->spacetype == SPACE_VIEW3D) {
     /* background mode support */
     v3d = t->area ? t->area->spacedata.first : NULL;
-    rv3d = t->region ? t->region->regiondata : NULL;
   }
 
-  if (!rv3d) {
-    /* ok, let's try to survive this */
-    unit_m4(projectMat);
-  }
-  else {
-    ED_view3d_ob_project_mat_get(rv3d, tc->obedit, projectMat);
-  }
+  edge_slide_projmat_get(t, tc, projectMat);
 
   if (use_occlude_geometry) {
     bmbvh = BKE_bmbvh_new_from_editmesh(em, BMBVH_RESPECT_HIDDEN, NULL, false);
@@ -379,21 +437,7 @@ static void calcEdgeSlide_mval_range(TransInfo *t,
         continue;
       }
 
-      if (sv->v_side[1]) {
-        ED_view3d_project_float_v3_m4(region, sv->v_side[1]->co, sco_b, projectMat);
-      }
-      else {
-        add_v3_v3v3(sco_b, v->co, sv->dir_side[1]);
-        ED_view3d_project_float_v3_m4(region, sco_b, sco_b, projectMat);
-      }
-
-      if (sv->v_side[0]) {
-        ED_view3d_project_float_v3_m4(region, sv->v_side[0]->co, sco_a, projectMat);
-      }
-      else {
-        add_v3_v3v3(sco_a, v->co, sv->dir_side[0]);
-        ED_view3d_project_float_v3_m4(region, sco_a, sco_a, projectMat);
-      }
+      edge_slide_pair_project(sv, region, projectMat, sco_a, sco_b);
 
       /* global direction */
       dist_sq = dist_squared_to_line_segment_v2(mval, sco_b, sco_a);
@@ -433,24 +477,7 @@ static void calcEdgeSlide_mval_range(TransInfo *t,
     MEM_freeN(loop_maxdist);
   }
 
-  /* possible all of the edge loops are pointing directly at the view */
-  if (UNLIKELY(len_squared_v2(mval_dir) < 0.1f)) {
-    mval_dir[0] = 0.0f;
-    mval_dir[1] = 100.0f;
-  }
-
-  /* zero out start */
-  zero_v2(mval_start);
-
-  /* dir holds a vector along edge loop */
-  copy_v2_v2(mval_end, mval_dir);
-  mul_v2_fl(mval_end, 0.5f);
-
-  sld->mval_start[0] = t->mval[0] + mval_start[0];
-  sld->mval_start[1] = t->mval[1] + mval_start[1];
-
-  sld->mval_end[0] = t->mval[0] + mval_end[0];
-  sld->mval_end[1] = t->mval[1] + mval_end[1];
+  edge_slide_data_init_mval(&t->mouse, sld, mval_dir);
 
   if (bmbvh) {
     BKE_bmbvh_free(bmbvh);
@@ -466,7 +493,6 @@ static void calcEdgeSlide_even(TransInfo *t,
 
   if (sld->totsv > 0) {
     ARegion *region = t->region;
-    RegionView3D *rv3d = NULL;
     float projectMat[4][4];
 
     int i = 0;
@@ -475,18 +501,7 @@ static void calcEdgeSlide_even(TransInfo *t,
     float dist_sq = 0;
     float dist_min_sq = FLT_MAX;
 
-    if (t->spacetype == SPACE_VIEW3D) {
-      /* background mode support */
-      rv3d = t->region ? t->region->regiondata : NULL;
-    }
-
-    if (!rv3d) {
-      /* ok, let's try to survive this */
-      unit_m4(projectMat);
-    }
-    else {
-      ED_view3d_ob_project_mat_get(rv3d, tc->obedit, projectMat);
-    }
+    edge_slide_projmat_get(t, tc, projectMat);
 
     for (i = 0; i < sld->totsv; i++, sv++) {
       /* Set length */
@@ -1550,6 +1565,35 @@ void initEdgeSlide_ex(
 void initEdgeSlide(TransInfo *t)
 {
   initEdgeSlide_ex(t, true, false, false, true);
+}
+
+/** \} */
+
+/* -------------------------------------------------------------------- */
+/** \name Mouse Input Utilities
+ * \{ */
+
+void transform_mode_edge_slide_reproject_input(TransInfo *t)
+{
+  ARegion *region = t->region;
+
+  FOREACH_TRANS_DATA_CONTAINER (t, tc) {
+    EdgeSlideData *sld = tc->custom.mode.data;
+    if (sld) {
+      float projectMat[4][4];
+      edge_slide_projmat_get(t, tc, projectMat);
+
+      TransDataEdgeSlideVert *curr_sv = &sld->sv[sld->curr_sv_index];
+
+      float mval_dir[3], sco_a[3], sco_b[3];
+      edge_slide_pair_project(curr_sv, region, projectMat, sco_a, sco_b);
+      sub_v3_v3v3(mval_dir, sco_b, sco_a);
+      edge_slide_data_init_mval(&t->mouse, sld, mval_dir);
+    }
+  }
+
+  EdgeSlideData *sld = edgeSlideFirstGet(t);
+  setCustomPoints(t, &t->mouse, sld->mval_end, sld->mval_start);
 }
 
 /** \} */
